syntax = "proto3";

package admin;

option java_package = "ar.edu.itba.pod.grpc.admin";
option java_multiple_files = true;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service AdminService {
  rpc AddRoom(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  rpc AddDoctor(DoctorData) returns (google.protobuf.BoolValue);
  rpc DefineAvailability(DoctorAvailability) returns (google.protobuf.BoolValue);
  rpc GetDoctorAvailability(Doctor) returns (DoctorAvailability);
}

message DoctorData {
  Doctor doctorName = 1;
  string level = 2;
}

message DoctorAvailability {
  Doctor doctorName = 1;
  string availability = 2;
}

message Doctor {
  string name = 1;
}