syntax = "proto3";
import "google/protobuf/empty.proto";

package waitingRoom;

option java_package = "ar.edu.itba.pod.grpc.waitingRoom";
option java_multiple_files = true;
import "google/protobuf/wrappers.proto";

service WaitingRoomService {
  rpc RegisterPatient(PatientData) returns (google.protobuf.Empty);
  rpc UpdateEmergencyLevel(PatientData) returns (google.protobuf.Empty);
  rpc WaitingTime(PatientName) returns (TimeData);
}

message PatientData {
  PatientName patientName = 1;
  int32 level = 2;
}

message PatientName {
  string name = 1;
}

message TimeData {
  PatientData patient = 1;
  int32 waitingTime = 2;
}